fixed header spacing

--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .navLink {
   cursor: pointer;
   color: black;
+  margin: 0 1rem;
 }
 
 .navLink:hover {
